Add a simple `unevaluatedProperties` benchmark case
Signed-off-by: Juan Cruz Viotti <jv@jviotti.com>

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -8,6 +8,7 @@ if(BLAZE_EVALUATOR)
     evaluator_draft4.cc
     evaluator_draft6.cc
     evaluator_draft7.cc
+    evaluator_2019_09.cc
     evaluator_2020_12.cc)
 endif()
 
