--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -11,4 +11,15 @@ if(BLAZE_COMPILER AND BLAZE_EVALUATOR)
     PRIVATE sourcemeta::blaze::compiler)
   target_link_libraries(sourcemeta_blaze_contrib_validate
     PRIVATE sourcemeta::blaze::evaluator)
+
+  add_executable(sourcemeta_blaze_contrib_trace trace.cc)
+  noa_add_default_options(PRIVATE sourcemeta_blaze_contrib_trace)
+  target_link_libraries(sourcemeta_blaze_contrib_trace
+    PRIVATE sourcemeta::jsontoolkit::json)
+  target_link_libraries(sourcemeta_blaze_contrib_trace
+    PRIVATE sourcemeta::jsontoolkit::jsonschema)
+  target_link_libraries(sourcemeta_blaze_contrib_trace
+    PRIVATE sourcemeta::blaze::compiler)
+  target_link_libraries(sourcemeta_blaze_contrib_trace
+    PRIVATE sourcemeta::blaze::evaluator)
 endif()
