Implement a new `TraceOutput` callback for tracing purposes
Signed-off-by: Juan Cruz Viotti <jv@jviotti.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,6 +103,7 @@ jobs:
           -DCMAKE_BUILD_TYPE:STRING=Release
           -DBLAZE_TESTS:BOOL=ON
           -DBLAZE_BENCHMARK:BOOL=ON
+          -DBLAZE_CONTRIB:BOOL=ON
           -DBLAZE_DOCS:BOOL=OFF
           -DBUILD_SHARED_LIBS:BOOL=OFF
           -DCMAKE_COMPILE_WARNING_AS_ERROR:BOOL=ON
@@ -114,6 +115,7 @@ jobs:
           -DCMAKE_BUILD_TYPE:STRING=Release
           -DBLAZE_TESTS:BOOL=ON
           -DBLAZE_BENCHMARK:BOOL=ON
+          -DBLAZE_CONTRIB:BOOL=ON
           -DBLAZE_DOCS:BOOL=OFF
           -DBUILD_SHARED_LIBS:BOOL=ON
           -DCMAKE_COMPILE_WARNING_AS_ERROR:BOOL=ON
