Avoid benchmark GitHub Action step on forks
Signed-off-by: Juan Cruz Viotti <jv@jviotti.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,7 +147,7 @@ jobs:
         if: matrix.platform.benchmark
 
       - uses: benchmark-action/github-action-benchmark@v1
-        if: matrix.platform.benchmark
+        if: matrix.platform.benchmark && github.event.pull_request.head.repo.fork != true
         with:
           name: Benchmark (${{ matrix.platform.benchmark }})
           tool: googlecpp
