--- a/src/compiler/CMakeLists.txt
+++ b/src/compiler/CMakeLists.txt
@@ -17,6 +17,8 @@ endif()
 
 target_link_libraries(sourcemeta_blaze_compiler PUBLIC
   sourcemeta::jsontoolkit::json)
+target_link_libraries(sourcemeta_blaze_compiler PRIVATE
+  sourcemeta::jsontoolkit::regex)
 target_link_libraries(sourcemeta_blaze_compiler PUBLIC
   sourcemeta::jsontoolkit::jsonpointer)
 target_link_libraries(sourcemeta_blaze_compiler PRIVATE
