--- a/src/evaluator/CMakeLists.txt
+++ b/src/evaluator/CMakeLists.txt
@@ -1,7 +1,8 @@
 noa_library(NAMESPACE sourcemeta PROJECT blaze NAME evaluator
   FOLDER "Blaze/Evaluator"
   PRIVATE_HEADERS error.h value.h instruction.h context.h
-  SOURCES evaluator.cc context.cc trace.h dispatch.h)
+  SOURCES evaluator.cc context.cc trace.h dispatch.h
+          evaluator_complete.h)
 
 if(BLAZE_INSTALL)
   noa_library_install(NAMESPACE sourcemeta PROJECT blaze NAME evaluator)
