--- a/src/evaluator/CMakeLists.txt
+++ b/src/evaluator/CMakeLists.txt
@@ -1,7 +1,8 @@
 noa_library(NAMESPACE sourcemeta PROJECT blaze NAME evaluator
   FOLDER "Blaze/Evaluator"
-  PRIVATE_HEADERS error.h value.h instruction.h
+  PRIVATE_HEADERS error.h value.h instruction.h string_set.h
   SOURCES evaluator.cc dispatch.inc.h
+          evaluator_string_set.cc
           evaluator_complete.h evaluator_fast.h)
 
 if(BLAZE_INSTALL)
