--- a/src/compiler/CMakeLists.txt
+++ b/src/compiler/CMakeLists.txt
@@ -5,6 +5,7 @@ sourcemeta_library(NAMESPACE sourcemeta PROJECT blaze NAME compiler
     compile.cc compile_describe.cc
     compile_output_error.cc compile_output_trace.cc
     compile_helpers.h default_compiler.cc
+    MurmurHash3.cpp
     default_compiler_2020_12.h
     default_compiler_2019_09.h
     default_compiler_draft7.h
