Ship a set of extension linter rules as part of Blaze
Signed-off-by: Juan Cruz Viotti <jv@jviotti.com>

--- a/test/packaging/find_package/CMakeLists.txt
+++ b/test/packaging/find_package/CMakeLists.txt
@@ -9,3 +9,4 @@ target_link_libraries(blaze_hello PRIVATE sourcemeta::core::json)
 target_link_libraries(blaze_hello PRIVATE sourcemeta::core::jsonschema)
 target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::compiler)
 target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::evaluator)
+target_link_libraries(blaze_hello PRIVATE sourcemeta::blaze::linter)
