--- a/src/compiler/CMakeLists.txt
+++ b/src/compiler/CMakeLists.txt
@@ -3,7 +3,7 @@ sourcemeta_library(NAMESPACE sourcemeta PROJECT blaze NAME compiler
   PRIVATE_HEADERS error.h output.h
   SOURCES
     compile.cc compile_describe.cc
-    compile_output_error.cc compile_output_trace.cc
+    compile_output_simple.cc compile_output_trace.cc
     compile_helpers.h default_compiler.cc
     default_compiler_2020_12.h
     default_compiler_2019_09.h
