Run ClangTidy on GitHub Actions
See: https://github.com/sourcemeta/blaze/issues/429
Signed-off-by: Juan Cruz Viotti <jv@jviotti.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -160,3 +160,19 @@ jobs:
           alert-threshold: '5%'
           comment-always: true
           fail-on-alert: false
+
+  clang-tidy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: cmake --version
+      - run: >
+          cmake -S . -B ./build
+          -DCMAKE_BUILD_TYPE:STRING=Release
+          -DBLAZE_TESTS:BOOL=OFF
+          -DBLAZE_BENCHMARK:BOOL=OFF
+          -DBLAZE_CONTRIB:BOOL=OFF
+          -DBLAZE_DOCS:BOOL=OFF
+          -DBUILD_SHARED_LIBS:BOOL=OFF
+          -DCMAKE_COMPILE_WARNING_AS_ERROR:BOOL=ON
+      - run: cmake --build ./build --config Release --target clang_tidy
