[WIP] Support converting `Instruction` to JSON
Signed-off-by: Juan Cruz Viotti <jv@jviotti.com>

--- a/test/compiler/CMakeLists.txt
+++ b/test/compiler/CMakeLists.txt
@@ -5,6 +5,7 @@ sourcemeta_googletest(NAMESPACE sourcemeta PROJECT blaze NAME compiler
     compiler_output_trace_test.cc
     compiler_unevaluated_2019_09_test.cc
     compiler_unevaluated_2020_12_test.cc
+    compiler_json_test.cc
     compiler_test_utils.h)
 
 target_link_libraries(sourcemeta_blaze_compiler_unit
