--- a/src/evaluator/CMakeLists.txt
+++ b/src/evaluator/CMakeLists.txt
@@ -2,7 +2,7 @@ sourcemeta_library(NAMESPACE sourcemeta PROJECT blaze NAME evaluator
   FOLDER "Blaze/Evaluator"
   PRIVATE_HEADERS error.h value.h instruction.h string_set.h
   SOURCES evaluator.cc dispatch.inc.h
-          evaluator_string_set.cc evaluator_instruction.cc
+          evaluator_string_set.cc
           evaluator_complete.h evaluator_dynamic.h
           evaluator_track.h evaluator_fast.h)
 
