[WIP] Prototype a Node.js native add-on
Signed-off-by: Juan Cruz Viotti <jv@jviotti.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,7 +74,8 @@ endif()
 
 if(PROJECT_IS_TOP_LEVEL)
   sourcemeta_target_clang_format(SOURCES
-    bindings/*.cc contrib/*.cc
+    bindings/nodejs/src/*.cc bindings/nodejs/src/*.h
+    contrib/*.cc
     src/*.h src/*.cc
     benchmark/*.h benchmark/*.cc
     test/*.h test/*.cc)
