[WIP] Implement a test runner module
Signed-off-by: Juan Cruz Viotti <jv@jviotti.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ option(BLAZE_COMPILER "Build the Blaze compiler library" ON)
 option(BLAZE_EVALUATOR "Build the Blaze evaluator library" ON)
 option(BLAZE_OUTPUT "Build the Blaze output formats library" ON)
 option(BLAZE_LINTER "Build the Blaze linter rule library" ON)
+option(BLAZE_TEST "Build the Blaze test runner library" ON)
 option(BLAZE_TESTS "Build the Blaze tests" OFF)
 option(BLAZE_BENCHMARK "Build the Blaze benchmarks" OFF)
 option(BLAZE_CONTRIB "Build the Blaze contrib programs" OFF)
@@ -57,6 +58,10 @@ if(BLAZE_LINTER)
   add_subdirectory(src/linter)
 endif()
 
+if(BLAZE_TEST)
+  add_subdirectory(src/test)
+endif()
+
 if(BLAZE_CONTRIB)
   add_subdirectory(contrib)
 endif()
@@ -99,6 +104,10 @@ if(BLAZE_TESTS)
 
   if(BLAZE_LINTER)
     add_subdirectory(test/linter)
+  endif()
+
+  if(BLAZE_TEST)
+    add_subdirectory(test/test)
   endif()
 
   if(PROJECT_IS_TOP_LEVEL)
