--- a/.github/workflows/website-deploy.yml
+++ b/.github/workflows/website-deploy.yml
@@ -31,6 +31,7 @@ jobs:
           -DBLAZE_EVALUATOR:BOOL=OFF
           -DBLAZE_OUTPUT:BOOL=OFF
           -DBLAZE_LINTER:BOOL=OFF
+          -DBLAZE_TEST:BOOL=OFF
           -DBLAZE_TESTS:BOOL=OFF
           -DBLAZE_DOCS:BOOL=ON
       - run: cmake --build ./build --config Release --target doxygen
