--- a/config.cmake.in
+++ b/config.cmake.in
@@ -8,10 +8,11 @@ if(NOT BLAZE_COMPONENTS)
   list(APPEND BLAZE_COMPONENTS evaluator)
   list(APPEND BLAZE_COMPONENTS output)
   list(APPEND BLAZE_COMPONENTS linter)
+  list(APPEND BLAZE_COMPONENTS test)
 endif()
 
 include(CMakeFindDependencyMacro)
-find_dependency(Core COMPONENTS regex uri json jsonpointer jsonschema)
+find_dependency(Core COMPONENTS regex uri json jsonpointer jsonschema io yaml)
 
 foreach(component ${BLAZE_COMPONENTS})
   if(component STREQUAL "compiler")
@@ -24,6 +25,10 @@ foreach(component ${BLAZE_COMPONENTS})
     include("${CMAKE_CURRENT_LIST_DIR}/sourcemeta_blaze_compiler.cmake")
     include("${CMAKE_CURRENT_LIST_DIR}/sourcemeta_blaze_output.cmake")
     include("${CMAKE_CURRENT_LIST_DIR}/sourcemeta_blaze_linter.cmake")
+  elseif(component STREQUAL "test")
+    include("${CMAKE_CURRENT_LIST_DIR}/sourcemeta_blaze_evaluator.cmake")
+    include("${CMAKE_CURRENT_LIST_DIR}/sourcemeta_blaze_compiler.cmake")
+    include("${CMAKE_CURRENT_LIST_DIR}/sourcemeta_blaze_test.cmake")
   elseif(component STREQUAL "output")
     include("${CMAKE_CURRENT_LIST_DIR}/sourcemeta_blaze_evaluator.cmake")
     include("${CMAKE_CURRENT_LIST_DIR}/sourcemeta_blaze_output.cmake")
